--- a/midterm/about.html
+++ b/midterm/about.html
@@ -56,54 +56,91 @@
         </div>
         <h1>Service</h1>
         <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
-        <div #b>
-            <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
-        </div>
-        <div #break>
-            <h2>Need A Break?</h2>
-            <h3>Resturant & Lounge</h3>
-            <p>will have full service throughout the day. Why not come in after a long day of class and order one of our
-                famous poutines. Finished with your food and drink?Why not try out our new billiiards area. Grab some
-                friends and dominate them in some pool, not your thing?Then come on downstairs and try out our new
-                bowling
-                lanes</p>
+        <div id="br">
+            <div>
+                <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
+            </div>
+            <div>
+                <h2>Need A Break?</h2>
+                <h3>Resturant & Lounge</h3>
+                <p>will have full service throughout the day. Why not come in after a long day of class and order
+                    one of
+                    our
+                    famous poutines. Finished with your food and drink?Why not try out our new billiiards area. Grab
+                    some
+                    friends and dominate them in some pool, not your thing?Then come on downstairs and try out our
+                    new
+                    bowling
+                    lanes</p>
+            </div>
         </div>
         <div class="grey">
-            <h2>Competitive Friends</h2>
-            <h3>Bowling Lans</h3>
-            <p>are finally here. Grab your friends and book a lane at Students Association Bowling Lanes that will be
-                part
-                of the upcoming ARC!don't like bowling?Well, look no further. Practicse your swing no more the weather
-                on
-                the Golf simulator that will be located in the ARC building</p>
-            <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
+            <div id="comp">
+                <div>
+                    <h2>Competitive Friends</h2>
+                    <h3>Bowling Lans</h3>
+                    <p>are finally here. Grab your friends and book a lane at Students Association Bowling Lanes that
+                        will
+                        be
+                        part
+                        of the upcoming ARC!don't like bowling?Well, look no further. Practicse your swing no more the
+                        weather
+                        on
+                        the Golf simulator that will be located in the ARC building</p>
+                </div>
+                <div>
+                    <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
+                </div>
+            </div>
         </div>
         <div class="container">
-            <h1 id="keep">Keep Up To Date With Our News Letter</h1>
-            <button class="sub">Subscribe</button>
+            <div id="subscribe">
+                <h1 id="keep">Keep Up To Date With Our News Letter</h1>
+                <button class="sub">Subscribe</button>
+            </div>
         </div>
-        <img class="gym" src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
-        <h2>New year, new me</h2>
-        <h3>Fitness Rooms</h3>
-        <p>Cardio equipment,free weight, selectorized weight equipment and stretching areas will be located in
-            strategically placed location to best suit your work-out routine. Indoor walking/ running track that will
-            test your endurancewith inclines and declines that weave around fitness nods the gmynasiums and the louge
-            area</p>
-        <img class="rock" src="./mtm6201-midterm-master-files/images/climbing.jpg" alt="a girl rock climbing">
+        <div id="g">
+            <div>
+                <img class="gym" src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
+            </div>
+            <div>
+                <h2>New year, new me</h2>
+                <h3>Fitness Rooms</h3>
+                <p>Cardio equipment,free weight, selectorized weight equipment and stretching areas will be located in
+                    strategically placed location to best suit your work-out routine. Indoor walking/ running track that
+                    will
+                    test your endurancewith inclines and declines that weave around fitness nods the gmynasiums and the
+                    louge
+                    area</p>
+            </div>
+        </div>
         <div class="grey">
-            <h2>Indoor Climbing</h2>
-            <h3>Rock Climbing</h3>
-            <P>Test your strenght and flexibility on the rock-climbing wall. Add some varites to your fitness routine,
-                the
-                ARC will be able to offer more yoga and fitness classes to fit into yourbusy schedule. After a busy day
-                of
-                rock-climbing or yoga, come enojoy our new massage therapy area.
-            </P>
+            <div id="rc">
+                <div>
+                    <h2>Indoor Climbing</h2>
+                    <h3>Rock Climbing</h3>
+
+                    <P>Test your strenght and flexibility on the rock-climbing wall. Add some varites to your fitness
+                        routine,
+                        the
+                        ARC will be able to offer more yoga and fitness classes to fit into yourbusy schedule. After a
+                        busy
+                        day
+                        of
+                        rock-climbing or yoga, come enojoy our new massage therapy area.
+                    </P>
+                </div>
+                <div>
+                    <img class="rock" src="./mtm6201-midterm-master-files/images/climbing.jpg"
+                        alt="a girl rock climbing">
+                </div>
+            </div>
         </div>
-        <h2>Special thank you to the following</h2>
-        <div sponsors>
+        <div class="sponsors">
+            <h2>Special thank you to the following</h2>
             <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
-            <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png"
+                alt="ac logo-image">
             <img class="spons" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
             <img class="spons" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
         </div>
