starting desktop version

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -14,45 +14,66 @@
     <header id="header" class="head">
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <!-- Starting the main content of the page -->
-        <h2>What to expect during construction</h2>
-        <p>With construction starting April 19 we anticipate the new arrival of the ARC building as easly as August
-            2021.</p>
-        <p>The current SA fitness zone and gym will be operating and open as usaul. Please visit the Fitness zone and
-            the gmynasium for more information of the hours,offering and pricing</p>
-        <img class="construction" src="./mtm6201-midterm-master-files/images/construction.svg"
-            alt="a construction site">
+        <div id="con">
+            <div>
+                <h2>What to expect during construction</h2>
+                <p>With construction starting April 19 we anticipate the new arrival of the ARC building as easly as
+                    August
+                    2021.</p>
+                <p>The current SA fitness zone and gym will be operating and open as usaul. Please visit the Fitness
+                    zone
+                    and
+                    the gmynasium for more information of the hours,offering and pricing</p>
+            </div>
+            <div>
+                <img class="construction" src="./mtm6201-midterm-master-files/images/construction.svg"
+                    alt="a construction site">
+            </div>
+        </div>
         <div class="about">
             <h1>About</h1>
             <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
         </div>
-        <div class="grey">
-            <h3>Who</h3>
-            <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
-                community.
-                This facility will provide our students with a place to break through perceptual barriers in a
-                welcoming,
-                safe, inclusive and inviting enviroment for students of all backgrounds, cultures, and ability to spark
-                a
-                movement</p>
-            <h3>What</h3>
-            <p>is this going cost to me? This facility will be included in your activity fees. All fee-paying student
-                can
-                use and partcipate in all activities in the building. As for the facility, it will cost Algonquin
-                College
-                $48.8million.</p>
-            <h3>where</h3>
-            <p>will the ARC building be? The ARC building will be located northeast of the student common building,
-                opposite
-                of the residence. The facility will be an estimated 100,000 square feet! Connected to the student
-                Commons by
-                a "plus15" Pedestrain link.</p>
+        <div id="w">
+            <div class="grey">
+                <div>
+                    <h2>Who</h2>
+                    <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
+                        community.
+                        This facility will provide our students with a place to break through perceptual barriers in a
+                        welcoming,
+                        safe, inclusive and inviting enviroment for students of all backgrounds, cultures, and ability
+                        to
+                        spark
+                        a
+                        movement</p>
+                </div>
+                <h2>What</h2>
+                <p>is this going cost to me? This facility will be included in your activity fees. All fee-paying
+                    student
+                    can
+                    use and partcipate in all activities in the building. As for the facility, it will cost
+                    Algonquin
+                    College
+                    $48.8million.</p>
+                <h2>where</h2>
+                <p>will the ARC building be? The ARC building will be located northeast of the student common
+                    building,
+                    opposite
+                    of the residence. The facility will be an estimated 100,000 square feet! Connected to the
+                    student
+                    Commons by
+                    a "plus15" Pedestrain link.</p>
+            </div>
         </div>
         <h1>Service</h1>
         <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
@@ -136,6 +157,7 @@
                 </div>
             </div>
         </div>
+        <div>
         <div class="sponsors">
             <h2>Special thank you to the following</h2>
             <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
