--- a/midterm/index.html
+++ b/midterm/index.html
@@ -21,45 +21,61 @@
     <header id="header" class="head">
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <!-- Starting the main content of the page -->
-        <h1>Discover Your ARC.</h1>
-        <P>With Algonquin College newest facilitys, there's always something for everyone to discover and enjoy</P>
-        <div class="icon">
-            <div font>
-                <i class="fas fa-bowling-ball"></i>
-                <h3>Bowling</h3>
+        <div id="bf">
+            <div>
+                <h1>Discover Your ARC.</h1>
+                <P>With Algonquin College newest facilitys, there's always something for everyone to discover and enjoy
+                </P>
+                <div class="icon">
+                    <div class="font">
+                        <i class="fas fa-bowling-ball"></i>
+                        <h3 class="icon-text">Bowling</h3>
+                    </div>
+                    <div>
+                        <i class="fas fa-dumbbell"></i>
+                        <h3 class="icon-text">FitnessCenter</h3>
+                    </div>
+                    <div>
+                        <i class="fas fa-hiking"></i>
+                        <h3 class="icon-text">RockClimbing</h3>
+                    </div>
+                    <div>
+                        <i class="fas fa-basketball-ball"></i>
+                        <h3 class="icon-text">Indoorcourt</h3>
+                    </div>
+                </div>
+                <button class="start" type="button">Get Started</button>
             </div>
             <div>
-                <i class="fas fa-dumbbell"></i>
-                <h3>FitnessCenter</h3>
-            </div>
-            <div>
-                <i class="fas fa-hiking"></i>
-                <h3>RockClimbing</h3>
-            </div>
-            <div>
-                <i class="fas fa-basketball-ball"></i>
-                <h3>Indoorcourt</h3>
+                <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
             </div>
         </div>
-        <button class="start" type="button">Get Started</button>
-        <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
         <div id="scroll">
             <i class='fas fa-arrow-alt-circle-down'>scroll</i>
         </div>
-        <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
-        <h2>Discover</h2>
-        <h3>Algonquin College</h3>
-        <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa, Ontario,
-            Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario,
-            Western Quebec, and upstate New york</p>
-        <button class="learn" type="button">Learn More</button>
+        <div class="gr">
+            <div>
+                <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
+            </div>
+            <div>
+                <h2>Discover</h2>
+                <h3>Algonquin College</h3>
+                <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa,
+                    Ontario,
+                    Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario,
+                    Western Quebec, and upstate New york</p>
+                <button class="learn" type="button">Learn More</button>
+            </div>
+        </div>
         <div class="container">
             <div class="sap">
                 <img id="simon" src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
@@ -73,13 +89,21 @@
                     focus on programming that result in out students taking person ownership for their health"</p>
             </div>
         </div>
-        <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
-        <h2>Discover</h2>
-        <h3>The Entertainment</h3>
-        <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity of
-            events. Now with the coming ARC facilitys, not only will it be providing more space for the students to
-            study, but it will also be bringing roome for latenight entertainment</p>
-        <button class="learn" type="button">Learn More</button>
+        <div class="br">
+            <div>
+                <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
+            </div>
+            <div>
+                <h2>Discover</h2>
+                <h3>The Entertainment</h3>
+                <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity
+                    of
+                    events. Now with the coming ARC facilitys, not only will it be providing more space for the students
+                    to
+                    study, but it will also be bringing roome for latenight entertainment</p>
+                <button class="learn" type="button">Learn More</button>
+            </div>
+        </div>
         <footer id="footer-container">
             <div class="footer">
                 <h4>Follow Us</h4>
