finished desktop version for all pages

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -43,20 +43,20 @@
             <h1>About</h1>
             <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
         </div>
-        <div id="w">
-            <div class="grey">
-                <div>
-                    <h2>Who</h2>
-                    <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
-                        community.
-                        This facility will provide our students with a place to break through perceptual barriers in a
-                        welcoming,
-                        safe, inclusive and inviting enviroment for students of all backgrounds, cultures, and ability
-                        to
-                        spark
-                        a
-                        movement</p>
-                </div>
+        <div class="grey">
+            <div>
+                <h2>Who</h2>
+                <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
+                    community.
+                    This facility will provide our students with a place to break through perceptual barriers in a
+                    welcoming,
+                    safe, inclusive and inviting enviroment for students of all backgrounds, cultures, and ability
+                    to
+                    spark
+                    a
+                    movement</p>
+            </div>
+            <div>
                 <h2>What</h2>
                 <p>is this going cost to me? This facility will be included in your activity fees. All fee-paying
                     student
@@ -65,6 +65,8 @@
                     Algonquin
                     College
                     $48.8million.</p>
+            </div>
+            <div>
                 <h2>where</h2>
                 <p>will the ARC building be? The ARC building will be located northeast of the student common
                     building,
@@ -75,8 +77,10 @@
                     a "plus15" Pedestrain link.</p>
             </div>
         </div>
-        <h1>Service</h1>
-        <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
+        <div class="service">
+            <h1>Service</h1>
+            <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
+        </div>
         <div id="br">
             <div>
                 <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
@@ -158,26 +162,26 @@
             </div>
         </div>
         <div>
-        <div class="sponsors">
-            <h2>Special thank you to the following</h2>
-            <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
-            <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png"
-                alt="ac logo-image">
-            <img class="spons" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
-            <img class="spons" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
-        </div>
-        <footer id="footer-container">
-            <div class="footer">
-                <h4>Follow Us</h4>
-                <div class="socialmedia-icon">
-                    <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
-                    <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
-                    <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
-                    <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-                    <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
-                </div>
+            <div class="sponsors">
+                <h2>Special thank you to the following</h2>
+                <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
+                <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png"
+                    alt="ac logo-image">
+                <img class="spons" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
+                <img class="spons" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
             </div>
-        </footer>
+            <footer id="footer-container">
+                <div class="footer">
+                    <h4>Follow Us</h4>
+                    <div class="socialmedia-icon">
+                        <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
+                        <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
+                        <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
+                        <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
+                        <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+            </footer>
     </main>
 </body>
 
