--- a/midterm/index.html
+++ b/midterm/index.html
@@ -63,10 +63,10 @@
             <i class='fas fa-arrow-alt-circle-down'>scroll</i>
         </div>
         <div class="gr">
-            <div>
+            <div id="w">
                 <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
             </div>
-            <div>
+            <div id="w">
                 <h2>Discover</h2>
                 <h3>Algonquin College</h3>
                 <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa,
@@ -90,10 +90,10 @@
             </div>
         </div>
         <div class="br">
-            <div>
+            <div id="w">
                 <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
             </div>
-            <div>
+            <div id="w">
                 <h2>Discover</h2>
                 <h3>The Entertainment</h3>
                 <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity
