adding css animation

--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -17,9 +17,17 @@
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li>
+                    <div><a href="index.html">HOME</a></div>
+                </li>
+                <li>
+                    <div><a href="about.html">ABOUT</a>
+                </li>
+                </div>
+                <li>
+                    <div><a href="contact.html">CONTACT</a>
+                </li>
+                </div>
             </ul>
         </nav>
     </header>
