--- a/midterm/index.html
+++ b/midterm/index.html
@@ -22,9 +22,17 @@
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li>
+                    <div><a href="index.html">HOME</a></div>
+                </li>
+                <li>
+                    <div><a href="about.html">ABOUT</a>
+                </li>
+                </div>
+                <li>
+                    <div><a href="contact.html">CONTACT</a>
+                </li>
+                </div>
             </ul>
         </nav>
     </header>
@@ -40,15 +48,15 @@
                         <i class="fas fa-bowling-ball"></i>
                         <h3 class="icon-text">Bowling</h3>
                     </div>
-                    <div>
+                    <div class="font">
                         <i class="fas fa-dumbbell"></i>
                         <h3 class="icon-text">FitnessCenter</h3>
                     </div>
-                    <div>
+                    <div class="font">
                         <i class="fas fa-hiking"></i>
                         <h3 class="icon-text">RockClimbing</h3>
                     </div>
-                    <div>
+                    <div class="font">
                         <i class="fas fa-basketball-ball"></i>
                         <h3 class="icon-text">Indoorcourt</h3>
                     </div>
@@ -60,7 +68,8 @@
             </div>
         </div>
         <div id="scroll">
-            <i class='fas fa-arrow-alt-circle-down'>scroll</i>
+            <h3 class="scro">Scroll</h3>
+            <i class='fas fa-arrow-alt-circle-down'></i>
         </div>
         <div class="gr">
             <div id="w">
