fixing minor error

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -75,7 +75,7 @@
             <div id="w">
                 <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
             </div>
-            <div id="w">
+            <div id="s">
                 <h2>Discover</h2>
                 <h3>Algonquin College</h3>
                 <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa,
@@ -102,7 +102,7 @@
             <div id="w">
                 <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
             </div>
-            <div id="w">
+            <div id="f">
                 <h2>Discover</h2>
                 <h3>The Entertainment</h3>
                 <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity
@@ -121,7 +121,7 @@
                     <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
                     <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
                     <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-                    <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+                    <img class="arrow" src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
                 </div>
             </div>
         </footer>
